log
Thu 21 Mar 2024 02:24:51 PM UTC: 
 exercises.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
fb8cae7
Thu 21 Mar 2024 03:23:43 PM UTC: 
 exercises.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:101:9: error: ‘elemento’ undeclared (first use in this function)
  101 |         elemento = next(L);
      |         ^~~~~~~~
exercises.c:101:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a61bb39
